contrast fix?

--- a/lesson6/css/small.css
+++ b/lesson6/css/small.css
@@ -104,6 +104,7 @@ section, article{
     grid-template-columns: 1fr 1fr;
     grid-gap: .5em;
     font-size: .75rem;
+    color: #000000;
 }
 .summary h3{
     grid-column:1/3;
